--- a/app/views/lib/locationlist.html
+++ b/app/views/lib/locationlist.html
@@ -7,7 +7,7 @@
 		<div class="btn-toolbar" role="toolbar" aria-label="...">
 			<div class="btn-group" role="group" aria-label="...">
 				<button type="button" class="btn-group btn-primary" tooltip="{{'Common.New' | translate}}" ng-click="newItem()" translate="Common.New">New</button>
-				<button type="button" class="btn-group btn-primary" tooltip="{{'Common.Refresh' | translate}}" ng-click="refreshList()" translate="Common.Refresh">Refresh</button>
+				<button type="button" class="btn-group btn-primary" tooltip="{{'Common.Refresh' | translate}}" ng-click="refreshList(true)" translate="Common.Refresh">Refresh</button>
 			</div>
 
 			<div class="btn-group" role="group" aria-label="...">
