Continues the development.

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -163,7 +163,7 @@
                                 <li><a ui-sref="home.lib.loc.list"><span translate="Lib.Locations">Locations</span></a></li>
                                 <li role="separator" class="divider"></li>
 								<li><a ui-sref="home.lib.book.list"><span translate="Lib.Books">Books</span> - <span translate="Common.ListView">List View</span></a></li>
-								<li role="separator" class="divider"></li>
+								<!--<li role="separator" class="divider"></li>-->
 								<!--<li class="dropdown-header">Movies</li>
 								<li><a ui-sref="home.lib.book.list"><span translate="Common.ListView">List View</span></a></li>-->
 	                        </ul>
