--- a/app/views/lib/booklist.html
+++ b/app/views/lib/booklist.html
@@ -26,8 +26,8 @@
 			<tr>
 				<th></th>
 				<th st-sort="id" translate="Common.ID">ID</th>
-				<th st-sort="name">ISBN</th>
-				<th st-sort="dtl" translate="Common.Other">Others</th>
+				<th st-sort="isbn">ISBN</th>
+				<th st-sort="oth" translate="Common.Other">Others</th>
 				<th translate="Common.Operations">Operations</th>
 			</tr>
 			<tr>
