--- a/app/views/lib/personlist.html
+++ b/app/views/lib/personlist.html
@@ -21,7 +21,7 @@
 		</div>
 	</div>
 
-	<table st-table="dispList" st-safe-src="arLibLoc" class="table table-striped table-hover">
+	<table st-table="dispList" st-safe-src="arLibPerson" class="table table-striped table-hover">
 		<thead>
 			<tr>
 				<th></th>
