--- a/app/views/lib/book.html
+++ b/app/views/lib/book.html
@@ -226,6 +226,13 @@
                                         ng-disabled="ActivityID == 3" required="required"></selectize>
                             </div>
                         </div>
+                        
+                        <div class="form-group">
+                            <label class="control-label col-sm-2">Translator</label>
+                            <div class="col-sm-10">
+                                <input type="checkbox" aria-label="..." ng-model="SelectedAuthorObject.TranslatorFlag" >
+                            </div>
+                        </div>
 
                         <!-- Button group -->
                         <div class="form-group">
@@ -316,10 +323,12 @@
                         <tr>
                             <th st-sort="lid" translate="Common.ID">ID</th>
                             <th st-sort="lname" translate="Common.Name">Name</th>
+                            <th st-sort="lmed" >Media</th>
+                            <th st-sort="lcmt" translate="Common.Comment">Comment</th>
                             <th translate="Common.Operations">Operations</th>
                         </tr>
                         <tr>
-                            <th colspan="3">
+                            <th colspan="5">
                                 <input st-search="" class="form-control" placeholder="{{ 'Search' | translate }}" type="text" />
                             </th>
                         </tr>
@@ -328,6 +337,8 @@
                         <tr st-select-row="row" st-select-mode="multiple" ng-repeat="row in LocationsCollection">
                             <td>{{row.ID}}</td>
                             <td>{{row.Name}}</td>
+                            <td>{{row.Media}}</td>
+                            <td>{{row.Comment}}</td>
                             <td>
                                 <button type="button" class="btn btn-sm" ng-click="displayLocation(row)">
                                     <i class="glyphicon glyphicon-share">
@@ -356,6 +367,22 @@
                             <div class="col-sm-10">
                                 <selectize placeholder='Pick location...' options='arLibLocation' config="locConfig" ng-model="SelectedLocationObject.ID"
                                         ng-disabled="ActivityID == 3" required="required"></selectize>
+                            </div>
+                        </div>
+                        
+                        <div class="form-group">
+                            <label class="control-label col-sm-2">Media</label>
+                            <div class="col-sm-10">
+                                <input type="text" placeholder='Media...' ng-model="SelectedLocationObject.Media"
+                                        ng-readonly="ActivityID == 3">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="control-label col-sm-2" translate="Common.Comment">Comment</label>
+                            <div class="col-sm-10">
+                                <input type="text" placeholder='Media...' ng-model="SelectedLocationObject.Comment"
+                                        ng-readonly="ActivityID == 3">
                             </div>
                         </div>
 
