--- a/app/views/lib/book.html
+++ b/app/views/lib/book.html
@@ -46,7 +46,7 @@
                         </tr>
                         <tr>
                             <th colspan="5">
-                                <input st-search="" class="form-control" placeholder="{{ 'Search' | translate }}" type="text" />
+                                <input st-search="" class="form-control" placeholder="{{ 'Common.Search' | translate }}" type="text" />
                             </th>
                         </tr>
                     </thead>
@@ -61,11 +61,11 @@
                                     <i class="glyphicon glyphicon-share">
                                     </i>
                                 </button>
-                                <button type="button" class="btn btn-sm" ng-click="editName(row)">
+                                <button type="button" class="btn btn-sm" ng-click="editName(row)" ng-hide="ActivityID == 3">
                                     <i class="glyphicon glyphicon-edit">
                                     </i>
                                 </button>
-                                <button type="button" ng-click="removeName(row)" class="btn btn-sm btn-danger">
+                                <button type="button" ng-click="removeName(row)" class="btn btn-sm btn-danger" ng-hide="ActivityID == 3">
                                     <i class="glyphicon glyphicon-remove-circle">
                                     </i>
                                 </button>
@@ -122,7 +122,7 @@
                         </tr>
                         <tr>
                             <th colspan="3">
-                                <input st-search="" class="form-control" placeholder="{{ 'Search' | translate }}" type="text" />
+                                <input st-search="" class="form-control" placeholder="{{ 'Common.Search' | translate }}" type="text" />
                             </th>
                         </tr>
                     </thead>
@@ -135,11 +135,11 @@
                                     <i class="glyphicon glyphicon-share">
                                     </i>
                                 </button>
-                                <button type="button" class="btn btn-sm" ng-click="editLang(row)">
+                                <button type="button" class="btn btn-sm" ng-click="editLang(row)" ng-hide="ActivityID == 3">
                                     <i class="glyphicon glyphicon-edit">
                                     </i>
                                 </button>
-                                <button type="button" ng-click="removeLang(row)" class="btn btn-sm btn-danger">
+                                <button type="button" ng-click="removeLang(row)" class="btn btn-sm btn-danger" ng-hide="ActivityID == 3">
                                     <i class="glyphicon glyphicon-remove-circle">
                                     </i>
                                 </button>
@@ -188,7 +188,7 @@
                         </tr>
                         <tr>
                             <th colspan="3">
-                                <input st-search="" class="form-control" placeholder="{{ 'Search' | translate }}" type="text" />
+                                <input st-search="" class="form-control" placeholder="{{ 'Common.Search' | translate }}" type="text" />
                             </th>
                         </tr>
                     </thead>
@@ -201,11 +201,11 @@
                                     <i class="glyphicon glyphicon-share">
                                     </i>
                                 </button>
-                                <button type="button" class="btn btn-sm" ng-click="editAuthor(row)">
+                                <button type="button" class="btn btn-sm" ng-click="editAuthor(row)" ng-hide="ActivityID == 3">
                                     <i class="glyphicon glyphicon-edit">
                                     </i>
                                 </button>
-                                <button type="button" ng-click="removeAuthor(row)" class="btn btn-sm btn-danger">
+                                <button type="button" ng-click="removeAuthor(row)" class="btn btn-sm btn-danger" ng-hide="ActivityID == 3">
                                     <i class="glyphicon glyphicon-remove-circle">
                                     </i>
                                 </button>
@@ -261,7 +261,7 @@
                         </tr>
                         <tr>
                             <th colspan="3">
-                                <input st-search="" class="form-control" placeholder="{{ 'Search' | translate }}" type="text" />
+                                <input st-search="" class="form-control" placeholder="{{ 'Common.Search' | translate }}" type="text" />
                             </th>
                         </tr>
                     </thead>
@@ -274,11 +274,11 @@
                                     <i class="glyphicon glyphicon-share">
                                     </i>
                                 </button>
-                                <button type="button" class="btn btn-sm" ng-click="editPress(row)">
+                                <button type="button" class="btn btn-sm" ng-click="editPress(row)" ng-hide="ActivityID == 3">
                                     <i class="glyphicon glyphicon-edit">
                                     </i>
                                 </button>
-                                <button type="button" ng-click="removePress(row)" class="btn btn-sm btn-danger">
+                                <button type="button" ng-click="removePress(row)" class="btn btn-sm btn-danger" ng-hide="ActivityID == 3">
                                     <i class="glyphicon glyphicon-remove-circle">
                                     </i>
                                 </button>
@@ -329,7 +329,7 @@
                         </tr>
                         <tr>
                             <th colspan="5">
-                                <input st-search="" class="form-control" placeholder="{{ 'Search' | translate }}" type="text" />
+                                <input st-search="" class="form-control" placeholder="{{ 'Common.Search' | translate }}" type="text" />
                             </th>
                         </tr>
                     </thead>
@@ -344,11 +344,11 @@
                                     <i class="glyphicon glyphicon-share">
                                     </i>
                                 </button>
-                                <button type="button" class="btn btn-sm" ng-click="editLocation(row)">
+                                <button type="button" class="btn btn-sm" ng-click="editLocation(row)" ng-hide="ActivityID == 3">
                                     <i class="glyphicon glyphicon-edit">
                                     </i>
                                 </button>
-                                <button type="button" ng-click="removeLocation(row)" class="btn btn-sm btn-danger">
+                                <button type="button" ng-click="removeLocation(row)" class="btn btn-sm btn-danger" ng-hide="ActivityID == 3">
                                     <i class="glyphicon glyphicon-remove-circle">
                                     </i>
                                 </button>
