--- a/app/views/welcome.html
+++ b/app/views/welcome.html
@@ -8,8 +8,8 @@
 					<table class="table table-striped table-hover">
 						<thead>
 							<tr>
-								<th>Activities</th>
-								<th translate="Common.Detail">Detail</th>
+								<th translate="Common.Activities"></th>
+								<th translate="Common.Detail"></th>
 							</tr>
 						</thead>
 						<tbody>
@@ -33,15 +33,15 @@
 			<div class="thumbnail">
 				<img src="app/resource/ToDo.jpg" alt="Todo.">
 				<div class="caption">
-					<h3><span>Activities in coming 2 weeks</span></h3>
+					<h3><span translate="Mainpage.ActivitiesIn2Weeks"></span></h3>
 					
 					<table class="table table-striped table-hover">
 						<thead>
 							<tr>
-								<th>Module</th>
-								<th translate="Common.Date">Date</th>
-								<th translate="Common.Detail">Detail</th>
-								<th translate="Common.Operations">Operation</th>
+								<th translate="Common.Module">/th>
+								<th translate="Common.Date"></th>
+								<th translate="Common.Detail"></th>
+								<th translate="Common.Operations"></th>
 							</tr>
 						</thead>
 						<tbody>
