Continues the development, 2015.12.31, part II.

--- a/app/views/finance/financedocument.html
+++ b/app/views/finance/financedocument.html
@@ -175,7 +175,7 @@
                     <div class="form-group">
                         <label class="control-label col-sm-2" translate="Finance.TransactionType">Transaction Type:</label>
                         <div class="col-sm-10">
-                            <selectize placeholder='Pick tran type...' options='arFinanceTransactionType' config="trantypeConfig" ng-model="SelectedDocumentItem.TranTypeID"
+                            <selectize options='arFinanceTransactionType' config="trantypeConfig" ng-model="SelectedDocumentItem.TranTypeID"
                                     ng-disabled="isReadonly" required="required"></selectize>
                         </div>
                     </div>
