--- a/app/views/userdetail.html
+++ b/app/views/userdetail.html
@@ -17,16 +17,16 @@
 	<table class="table table-striped table-hover">
 		<thead>
 			<tr>
-				<th>Seq No</th>
-				<th translate="Common.Date">Date</th>
-				<th>Log Type</th>
-				<th>Others</th>
+				<th translate="Login.SeqNo"></th>
+				<th translate="Common.Date"></th>
+				<th translate="Common.Type"></th>
+				<th translate="Common.Others"></th>
 			</tr>
 		</thead>
 		<tbody>
 			<tr ng-repeat="row in arUserLogList">
 				<td>{{row.SeqNo}}</td>
-				<td>{{row.TimePoint | date:'yyyy-MM-dd HH:mm:ss Z'}}</td>
+				<td>{{row.TimePoint | date:'yyyy-MM-dd HH:mm:ss'}}</td>
 				<td>{{row.LogTypeString | translate}}</td>
 				<td>{{row.Others}}</td>
 			</tr>
