Continues the development, 2015.12.31, part III.

--- a/app/views/userdetail.html
+++ b/app/views/userdetail.html
@@ -8,7 +8,7 @@
 		</thead>
 		<tbody>
 			<tr ng-repeat="row in displayedCollection">
-				<td>{{row.userobj}}</td>
+				<td>{{row.userobj | translate}}</td>
 				<td>{{row.usercont}}</td>
 			</tr>
 		</tbody>
