Continues the development, 2016.1.5, part I.

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -2,7 +2,7 @@
   <br>
   <div class="panel panel-success">
       <div class="panel-heading">
-        <h3 class="panel-title">About HIH</h3>
+        <h3 class="panel-title">About H.I.H.</h3>
       </div>
       <div class="panel-body">
         H.I.H., Version 0.5.5; <br>
@@ -15,45 +15,42 @@
       <div class="panel-heading">
         <h3 class="panel-title" translate="Nav.Acknowledgements">Acknowledges</h3>
       </div>
-      <div class="panel-body">
+    <div class="panel-body">
         <ul class="list-group">
-          <a target="_blank" href="https://www.angularjs.org/" class="list-group-item">
-            <span class="badge">1.4.6</span>
-            Angular JS
-          </a>
-          <a target="_blank" href="http://getbootstrap.com/" class="list-group-item">
-            <span class="badge">3.0</span>
-            Bootstrap
-          </a>
-          <a target="_blank" href="http://www.tinymce.com/" class="list-group-item">
-            <span class="badge">4.2.7</span>
-            TinyMCE
-          </a>
-          <a target="_blank" href="http://www.jquery.com/" class="list-group-item">
-            <span class="badge">2.1.4</span>
-            jQuery</a>
-          <a target="_blank" href="http://www.jstree.com/" class="list-group-item"><span class="badge">3.1.1</span>jsTree</a>
-					<a target="_blank" href="http://t4t5.github.io/sweetalert/" class="list-group-item"><span class="badge">1.0.1</span>Sweet Alert</a>
-					<a target="_blank" href="https://github.com/ezraroi/ngJsTree" class="list-group-item"><span class="badge">0.0.7</span>ngJsTree</a>
-					<a target="_blank" href="https://github.com/thomaspark/bootswatch/" class="list-group-item">bootswatch</a>
-					<a target="_blank" href="https://angular-translate.github.io/" class="list-group-item"><span class="badge">2.7.2</span>Angular Translate</a>
-					<a target="_blank" href="http://www.chartjs.org/" class="list-group-item"><span class="badge">1.0.2</span>Chart.js</a>
-					<a target="_blank" href="http://brianreavis.github.io/selectize.js/" class="list-group-item"><span class="badge">0.12.1</span>selectize.js</a>
-					<a target="_blank" href="https://github.com/machineboy2045/angular-selectize" class="list-group-item">angular-selectize</a>
-					<a target="_blank" href="http://angular-ui.github.io/" class="list-group-item">Angular UI</a>
-					<a target="_blank" href="http://angular-ui.github.io/bootstrap/" class="list-group-item">
-            <span class="badge">0.13.0</span>UI-Bootstrap</a>
-					<a target="_blank" href="http://angular-ui.github.io/ui-router/" class="list-group-item">
-            <span class="badge">0.2.15</span>UI-Router</a>
-					<a target="_blank" href="https://github.com/angular-ui/ui-tinymce" class="list-group-item">UI-tinymce</a>
-					<a target="_blank" href="http://ui-grid.info/" class="list-group-item"><span class="badge">3.0.7</span>UI-Grid</a>
-					<a target="_blank" href="http://jtblin.github.io/angular-chart.js/" class="list-group-item"><span class="badge">0.8.5</span>Angular Chart</a>
-					<a target="_blank" href="http://www.bootcdn.cn/" class="list-group-item">BootCDN</a>
-					<a target="_blank" href="https://github.com/angular-ui/ui-select" class="list-group-item">UI-Select</a>
-					<a target="_blank" href="https://github.com/lorenzofox3/Smart-Table" class="list-group-item"><span class="badge">2.1.6</span>Smart-Table</a>
-					<a target="_blank" href="http://cdn.code.baidu.com/" class="list-group-item">Baidu CDN</a>
+            <a target="_blank" href="https://www.angularjs.org/" class="list-group-item">
+                <span class="badge">1.4.6</span> Angular JS
+            </a>
+            <a target="_blank" href="http://getbootstrap.com/" class="list-group-item">
+                <span class="badge">3.0</span> Bootstrap
+            </a>
+            <a target="_blank" href="http://www.tinymce.com/" class="list-group-item">
+                <span class="badge">4.2.7</span> TinyMCE
+            </a>
+            <a target="_blank" href="http://www.jquery.com/" class="list-group-item">
+                <span class="badge">2.1.4</span> jQuery
+            </a>
+            <a target="_blank" href="http://www.jstree.com/" class="list-group-item"><span class="badge">3.1.1</span>jsTree</a>
+            <a target="_blank" href="http://t4t5.github.io/sweetalert/" class="list-group-item"><span class="badge">1.0.1</span>Sweet Alert</a>
+            <a target="_blank" href="https://github.com/ezraroi/ngJsTree" class="list-group-item"><span class="badge">0.0.7</span>ngJsTree</a>
+            <a target="_blank" href="https://github.com/thomaspark/bootswatch/" class="list-group-item">bootswatch</a>
+            <a target="_blank" href="https://angular-translate.github.io/" class="list-group-item"><span class="badge">2.7.2</span>Angular Translate</a>
+            <a target="_blank" href="http://www.chartjs.org/" class="list-group-item"><span class="badge">1.0.2</span>Chart.js</a>
+            <a target="_blank" href="http://selectize.github.io/selectize.js/" class="list-group-item"><span class="badge">0.12.1</span>selectize.js</a>
+            <a target="_blank" href="https://github.com/machineboy2045/angular-selectize" class="list-group-item">angular-selectize</a>
+            <a target="_blank" href="http://angular-ui.github.io/" class="list-group-item">Angular UI</a>
+            <a target="_blank" href="http://angular-ui.github.io/bootstrap/" class="list-group-item">
+                <span class="badge">0.13.0</span>UI-Bootstrap</a>
+            <a target="_blank" href="http://angular-ui.github.io/ui-router/" class="list-group-item">
+                <span class="badge">0.2.15</span>UI-Router</a>
+            <a target="_blank" href="https://github.com/angular-ui/ui-tinymce" class="list-group-item">UI-tinymce</a>
+            <a target="_blank" href="http://ui-grid.info/" class="list-group-item"><span class="badge">3.0.7</span>UI-Grid</a>
+            <a target="_blank" href="http://jtblin.github.io/angular-chart.js/" class="list-group-item"><span class="badge">0.8.5</span>Angular Chart</a>
+            <a target="_blank" href="http://www.bootcdn.cn/" class="list-group-item">BootCDN</a>
+            <a target="_blank" href="https://github.com/angular-ui/ui-select" class="list-group-item">UI-Select</a>
+            <a target="_blank" href="https://github.com/lorenzofox3/Smart-Table" class="list-group-item"><span class="badge">2.1.6</span>Smart-Table</a>
+            <a target="_blank" href="http://cdn.code.baidu.com/" class="list-group-item">Baidu CDN</a>
         </ul>
-    </div>  
+    </div>
     
   <!--<div style="height: 605px">
     <carousel interval="myInterval">
