--- a/app/views/lib/person.html
+++ b/app/views/lib/person.html
@@ -31,6 +31,14 @@
 		</div>
 
 		<div class="form-group">
+			<label class="control-label col-sm-2" for="iptTags" translate="Common.Tags">Tags</label>
+			<div class="col-sm-10">
+               <selectize config="tagsConfig" id="iptTags" ng-model="PersonObject.Tags"
+                        ng-disabled="ActivityID == 3"></selectize>
+			</div>
+		</div>
+
+		<div class="form-group">
 			<div class="col-sm-offset-2 col-sm-10">
 				<button class="btn btn-default btn-primary" ng-click="submit()" ng-hide="ActivityID == 3"
 					translate="Common.Submit">Submit</button>
