--- a/app/views/lib/book.html
+++ b/app/views/lib/book.html
@@ -10,15 +10,23 @@
 			<label class="control-label col-sm-2" for="iptID" translate="Common.ID"></label>
 			<div class="col-sm-10">
 				<input type="text" class="form-control" id="iptID"
-					readonly="readonly" placeholder="{{'Common.ID' | translate}}" ng-model="BookObject.ID">
+					   readonly="readonly" placeholder="{{'Common.ID' | translate}}" ng-model="BookObject.ID">
 			</div>
 		</div>
 		
 		<div class="form-group">
 			<label class="control-label col-sm-2" for="iptISBN" translate="Lib.ISBN"></label>
 			<div class="col-sm-10">
-				<input type="text" class="form-control" id="iptISBN"
+				<input type="text" class="form-control" id="iptISBN" ng-readonly="ActivityID == 3"
 					placeholder="{{'Lib.ISBN' | translate}}" ng-model="BookObject.ISBN">
+			</div>
+		</div>
+
+		<div class="form-group">
+			<label class="control-label col-sm-2" for="iptTags" translate="Common.Langauge">Language</label>
+			<div class="col-sm-10">
+               <selectize options='arLibLang' config="langlangConfig" ng-model="BookObject.Langauges"
+                        ng-disabled="ActivityID == 3" required="required"></selectize>
 			</div>
 		</div>
 
