--- a/app/views/lib/organization.html
+++ b/app/views/lib/organization.html
@@ -25,8 +25,16 @@
 		<div class="form-group">
 			<label class="control-label col-sm-2" for="iptOthers" translate="Common.Other">Other</label>
 			<div class="col-sm-10">
-				<input type="text" class="form-control" id="iptOthers" ng-readonly="ActivityID == 3"
-						placeholder="{{'Common.Other' | translate}}" ng-model="OrganizationObject.Others" required>
+                <textarea class="form-control" rows="5" id="iptOthers" 
+                        ng-model="OrganizationObject.Others" ng-readonly="ActivityID == 3"></textarea>
+			</div>
+		</div>
+        
+		<div class="form-group">
+			<label class="control-label col-sm-2" for="iptTags" translate="Common.Tags">Tags</label>
+			<div class="col-sm-10">
+               <selectize config="tagsConfig" id="iptTags" ng-model="PersonObject.Tags"
+                        ng-disabled="ActivityID == 3"></selectize>
 			</div>
 		</div>
 
