--- a/app/views/lib/book.html
+++ b/app/views/lib/book.html
@@ -315,16 +315,16 @@
                         <div class="form-group">
                             <label class="control-label col-sm-2" translate="Lib.Media"></label>
                             <div class="col-sm-10">
-                                <input type="text" placeholder="{{ 'Lib.Media' | translate }}" ng-model="SelectedLocationObject.Media"
-                                        ng-readonly="ActivityID == 3">
+                                <textarea class="form-control" rows="5"
+                                        ng-model="SelectedLocationObject.Media" ng-readonly="ActivityID == 3"></textarea>
                             </div>
                         </div>
 
                         <div class="form-group">
                             <label class="control-label col-sm-2" translate="Common.Comment">Comment</label>
                             <div class="col-sm-10">
-                                <input type="text" placeholder="{{ 'Common.Comment' | translate }}" ng-model="SelectedLocationObject.Comment"
-                                        ng-readonly="ActivityID == 3">
+                                <textarea class="form-control" rows="5"
+                                        ng-model="SelectedLocationObject.Comment" ng-readonly="ActivityID == 3"></textarea>
                             </div>
                         </div>
 
