--- a/app/views/lib/book.html
+++ b/app/views/lib/book.html
@@ -23,9 +23,9 @@
 		</div>
 
 		<div class="form-group">
-			<label class="control-label col-sm-2" for="iptTags" translate="Common.Langauge">Language</label>
+			<label class="control-label col-sm-2" translate="Common.Language">Language</label>
 			<div class="col-sm-10">
-               <selectize options='arLibLang' config="langlangConfig" ng-model="BookObject.Langauges"
+               <selectize options='arLibLang' config="langConfig" ng-model="BookObject.Langauges"
                         ng-disabled="ActivityID == 3" required="required"></selectize>
 			</div>
 		</div>
@@ -315,7 +315,7 @@
                         <div class="form-group">
                             <label class="control-label col-sm-2" translate="Lib.Media"></label>
                             <div class="col-sm-10">
-                                <textarea class="form-control" rows="5"
+                                <textarea class="form-control" rows="3"
                                         ng-model="SelectedLocationObject.Media" ng-readonly="ActivityID == 3"></textarea>
                             </div>
                         </div>
@@ -323,7 +323,7 @@
                         <div class="form-group">
                             <label class="control-label col-sm-2" translate="Common.Comment">Comment</label>
                             <div class="col-sm-10">
-                                <textarea class="form-control" rows="5"
+                                <textarea class="form-control" rows="2"
                                         ng-model="SelectedLocationObject.Comment" ng-readonly="ActivityID == 3"></textarea>
                             </div>
                         </div>
