Continues the development, 2016.1.12, part I.

--- a/app/views/lib/book.html
+++ b/app/views/lib/book.html
@@ -25,7 +25,7 @@
 		<div class="form-group">
 			<label class="control-label col-sm-2" translate="Common.Language">Language</label>
 			<div class="col-sm-10">
-               <selectize options='arLibLang' config="langConfig" ng-model="LangaugesCollection"
+               <selectize options='arLibLang' config="langConfig" ng-model="LanguagesCollection"
                             ng-disabled="ActivityID == 3" required="required"></selectize>
 			</div>
 		</div>
