Continues the development, 2016.1.12, part II.

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -157,6 +157,7 @@
 	                    <li class="dropdown" dropdown>
 	                        <a role="button" class="dropdown-toggle" dropdown-toggle><span translate="Nav.Libraries">Libraries</span><b class="caret"></b></a>
 	                        <ul class="dropdown-menu">
+								<li><a ui-sref="home.lib.setting"><span translate="Common.Setting">Setting</span></a></li>
                                 <li><a ui-sref="home.lib.language.list"><span translate="Common.Language">Language</span></a></li>
                                 <li><a ui-sref="home.lib.person.list"><span translate="Lib.Person">Person</span></a></li>
                                 <li><a ui-sref="home.lib.org.list"><span translate="Lib.Organization">Organization</span></a></li>
