Continues the development, 2016.1.13, part III.

--- a/app/views/lib/organization.html
+++ b/app/views/lib/organization.html
@@ -33,7 +33,7 @@
 		<div class="form-group">
 			<label class="control-label col-sm-2" for="iptTags" translate="Common.Tags">Tags</label>
 			<div class="col-sm-10">
-               <selectize config="tagsConfig" id="iptTags" ng-model="PersonObject.Tags"
+               <selectize config="tagsConfig" id="iptTags" ng-model="OrganizationObject.Tags"
                         ng-disabled="ActivityID == 3"></selectize>
 			</div>
 		</div>
