Continues the development, 2016.1.17, part II.

--- a/app/views/lib/book.html
+++ b/app/views/lib/book.html
@@ -33,7 +33,7 @@
 		<div class="form-group">
 			<label class="control-label col-sm-2" translate="Common.Type">Type</label>
 			<div class="col-sm-10">
-               <selectize options='arLibBookType' config="typeConfig" ng-model="BookTypesCollection"
+               <selectize options='arLibBookType' config="typeConfig" ng-model="BookObject.Types"
                             ng-disabled="ActivityID == 3" required="required"></selectize>
 			</div>
 		</div>
