--- a/app/views/lib/bookgroup.html
+++ b/app/views/lib/bookgroup.html
@@ -35,7 +35,7 @@
             <div class="panel-heading">{{'Lib.Book' | translate}}</div>
             <div class="panel-body">
                 <!-- Tables -->
-                <table st-table="dispList" st-safe-src="arLibBook" class="table table-striped table-hover">
+                <table st-table="dispList" st-safe-src="BookGroupObject.Books" class="table table-striped table-hover">
                     <thead>
                         <tr>
                             <th></th>
