Continues the development, 2016.1.22, part I.

--- a/app/views/lib/bookgroup.html
+++ b/app/views/lib/bookgroup.html
@@ -81,7 +81,15 @@
                             </td>
                         </tr>
                     </tfoot>
-                </table>	
+                </table>
+                
+                <br />
+
+                <div class="panel panel-default" style="margin: 30px, 10px;">
+                    <div class="panel-heading">Add new book</div>
+                    <div class="panel-body">
+                    </div>
+                </div>
             </div>
         </div>
 
